app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 */

@import "variables";
@import "bootstrap";
@import "bootswatch";
@import "pets";
@import "contacts";

body {
	overflow: hidden;
	background-image: image-url("background.jpg");
	background-position: center; /* Center the image */
	background-repeat: no-repeat; /* Do not repeat the image */
	background-size: cover; /* Resize the background image to cover the entire container */
}

main {
	margin-top: 4rem;
}

footer {
	position: fixed;
	bottom: 0;
	width: 100vw;
	background-color: #2C3E50;
	color: white;
	z-index: 2;
}

.custom-scroll {
	height: 95vh;
	width: 100vw;
	overflow-y: scroll;
}


.carousel-caption {
		top: 0;
		bottom: auto;
}

.carousel-item {
	height: 95vh;
}
.carousel-item > img {
	position: absolute;
	top: 0;
	left: 0;
	min-width: 100%;
	height: 95vh;
}

@include media-breakpoint-between(xs, md) {
		.carousel-item > img {
		transform: translateX(-30%);
	}
}


// login page
.main-head{
	height: 150px;
	background: #FFF;
}

.sidenav {
	height: 50%;
	background-color: #2D3E50;
	overflow-x: hidden;
}

@media screen and (max-height: 450px) {
	.sidenav {
		height: 50%;
		padding-top: 0;
	}
}

@media screen and (max-width: 450px) {
	.sidenav {
		height: 50%;
		padding-top: 0;
	}

	.login-form{
		margin-top: 2vh;
		margin-bottom: 5vh;
	}

	.edit-form{
		margin-top: 2vh;
		margin-bottom: 5vh;
	}

	.register-form{
		margin-top: 2vh;
		margin-bottom: 5vh;
	}
}

@media screen and (min-width: 768px){
	.edit-main{
		// margin-top: 0vh;
		margin-left: 50vw;
	}

	.login-main{
		// margin-top: 0vh;
		margin-left: 65vw;
	}

	.sidenav{
		height: 100%;
		width: 50vw;
		position: fixed;
		padding-top: 20vh;
		padding-left: 10vw;
		z-index: 1;
		top: 0;
		left: 0;
	}

	.login-form{
		margin-top: 35vh;
	}

	.edit-form{
		margin-top: 20vh;
	}

	.register-form{
		margin-top: 30vh;
	}
}


.login-main-text{
	margin-top: 20vh;
	padding: 60px;
	color: #fff;
}

.login-main-text h2{
	font-weight: 300;
}

